Update cloudinary Image links

--- a/src/content/blogs/a-closer-look-at-virtio-and-gpu-virtualisation.mdx
+++ b/src/content/blogs/a-closer-look-at-virtio-and-gpu-virtualisation.mdx
@@ -4,13 +4,13 @@ description: >
   In this blog we will discuss VirtIO and GPU virtualisation challenges along
   with the progress the Linaro development teams are making in this space.
 date: 2023-06-21T01:16:56.000Z
-image: linaro-website/images/blog/whatsapp-image-2023-06-21-at-14.25.03
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/whatsapp-image-2023-06-21-at-14.25.03
 tags:
   - virtualization
   - automotive
 author: alex-bennee
 related: []
-
 ---
 
 As projects like [Project Cassini](https://www.arm.com/markets/computing-infrastructure/edge-computing/project-cassini) and [SOAFEE](https://www.soafee.io/) (Scalable Open Architecture for Embedded Edge) are being developed to support standards-based Cloud Native Edge development/deployment environments, VirtIO is a key building block designed to enable these efficient EDGE development environments. GPU virtualisation is one of the more complex components to enable in VirtIO. This blog will discuss some of those challenges along with the progress the Linaro development teams are making in this space.
