--- a/src/content/blogs/adding-support-for-mte-debugging-to-qemu.mdx
+++ b/src/content/blogs/adding-support-for-mte-debugging-to-qemu.mdx
@@ -1,9 +1,13 @@
 ---
 title: Adding Support for MTE debugging to QEMU
-description: |
-  This blog post explains how Linaro enabled QEMU to debug MTE (Memory Tagging Extension) code on machines that support this feature. We'll start by explaining MTE and what was needed to enable debugging. Then, we'll describe the components we upstreamed to GDB and QEMU to make it work.
+description: >
+  This blog post explains how Linaro enabled QEMU to debug MTE (Memory Tagging
+  Extension) code on machines that support this feature. We'll start by
+  explaining MTE and what was needed to enable debugging. Then, we'll describe
+  the components we upstreamed to GDB and QEMU to make it work.
 date: 2025-04-24T11:00:00.000Z
-image: linaro-website/images/blog/Virtualization_image_x3vb2d.png
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Virtualization_image_x3vb2d.png
 tags:
   - qemu
   - virtualization
