--- a/src/content/blogs/android-14-now-available-on-linaro-reference-boards-in-aosp.mdx
+++ b/src/content/blogs/android-14-now-available-on-linaro-reference-boards-in-aosp.mdx
@@ -3,12 +3,12 @@ title: Linaro reference devboards boot Android 14 on the day of its release
 description: |
   Android14 boots on Linaro reference devboards on the day of its release
 date: 2023-10-05T10:03:05.000Z
-image: linaro-website/images/blog/screenshot-2023-10-05-at-11.34.24
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/screenshot-2023-10-05-at-11.34.24
 tags:
   - android
 author: amit-pundir
 related: []
-
 ---
 
 The source code for the latest Android release - Android 14 - is out! The android14-release branch in the Android Open Source Project (AOSP) boots straight out of the box on the Linaro supported reference Boards - Qualcomm Robotics Board RB5, Qualcomm Dragonboard 845c (DB845c, aka RB3) and HiSilicon Hikey960.
