--- a/src/content/blogs/blender-now-enabled-on-windows-on-arm.mdx
+++ b/src/content/blogs/blender-now-enabled-on-windows-on-arm.mdx
@@ -3,12 +3,12 @@ title: Blender now enabled on Windows on Arm
 description: |
   Blender now enabled on Windows on Arm. Here is the story of how we got there.
 date: 2024-07-14T10:00:00.000Z
-image: linaro-website/images/blog/blender-image3_ohobsy.png
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/blender-image3_ohobsy.png
 tags:
   - windows-on-arm
 author: anthony-roberts
 related: []
-
 ---
 In March 2024, the pull request to enable native [Windows on Arm](https://www.linaro.org/projects/windows-on-arm/) (WoA) builds of Blender was finally merged, and [daily builds](https://builder.blender.org/download/daily/) became available from May. The enablement effort has been a long road - starting in September 2022, and coming to a close in March 2024 - with a number of bumps, twists, and turns. This blog article discusses the process of enablement that was undertaken, and a few of the things that came up along the way. It also explains the scope of the work required to enable a large community-driven project such as Blender - historically targeted at x64 Windows - on the Windows on ARM platform.
 
