--- a/src/content/blogs/boosting-the-next-wave-of-arm-innovation.mdx
+++ b/src/content/blogs/boosting-the-next-wave-of-arm-innovation.mdx
@@ -1,9 +1,13 @@
 ---
-title: Boosting the Next Wave of Arm Innovation - What to expect from Linaro Connect 2025
-description: |
-  Boosting the Next Wave of Arm Innovation - What to expect from Linaro Connect 2025
+title: >-
+  Boosting the Next Wave of Arm Innovation - What to expect from Linaro Connect
+  2025
+description: >
+  Boosting the Next Wave of Arm Innovation - What to expect from Linaro Connect
+  2025
 date: 2025-04-22T11:00:00.000Z
-image: linaro-website/images/blog/connect_blog_img3_i6m24t.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/connect_blog_img3_i6m24t.jpg
 tags:
   - arm
   - open-source
