--- a/src/content/blogs/building-glibc-with-llvm-the-how-and-why.mdx
+++ b/src/content/blogs/building-glibc-with-llvm-the-how-and-why.mdx
@@ -1,16 +1,17 @@
 ---
-title: "Building GLIBC with LLVM: The How and Why"
-description: In this blog we talk about how to build GLIBC with LLVM and why we
-  think you should. Read more here!
+title: 'Building GLIBC with LLVM: The How and Why'
+description: >-
+  In this blog we talk about how to build GLIBC with LLVM and why we think you
+  should. Read more here!
 date: 2023-04-12T09:23:21.000Z
-image: linaro-website/images/blog/30921188158_953bca1c9f_k
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/30921188158_953bca1c9f_k
 tags:
   - open-source
   - toolchain
   - arm
 author: adhemerval-zanella
 related: []
-
 ---
 
 The GNU C Library (GLIBC) is the GNU project implementation of the C runtime library, and being a GNU project, it is developed and deployed with the GCC toolchain. Due to the strong ties to GCC, the majority of development and testing is done only with it. New features are also often tied to newer GCC features.
