--- a/src/content/blogs/continuous-integration-with-linaro-forge.mdx
+++ b/src/content/blogs/continuous-integration-with-linaro-forge.mdx
@@ -1,14 +1,15 @@
 ---
 title: Continuous Integration with Linaro Forge
-description: In this blog we talk about Continuous Integration with Linaro
-  Forge. Read more here!
+description: >-
+  In this blog we talk about Continuous Integration with Linaro Forge. Read more
+  here!
 date: 2018-06-04T08:37:10.000Z
-image: linaro-website/images/blog/Banner_Toolchain
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Toolchain
 tags:
   - hpc
 author: florent-lebeau
 related: []
-
 ---
 
 Continuous integration or CI is widely used in software engineering to improve software integration and quality, especially for large projects that involve a lot of developers. Naturally, high performance computing (HPC) applications can benefit from CI frameworks such as [Jenkins](https://www.jenkins.io/) to make sure that the software meets precision and performance requirements as the code grows and optimizations are performed.
