--- a/src/content/blogs/debugging-methodology-linaro-forge-goodbye-code-defects.mdx
+++ b/src/content/blogs/debugging-methodology-linaro-forge-goodbye-code-defects.mdx
@@ -1,15 +1,16 @@
 ---
 title: Debugging Methodology + Linaro Forge = Goodbye Code Defects!
-description: In this blog, Beau Paisley talks about the state of debugging tools
-  for HPC. Read more here!
+description: >-
+  In this blog, Beau Paisley talks about the state of debugging tools for HPC.
+  Read more here!
 date: 2023-05-23T01:24:23.000Z
-image: linaro-website/images/blog/Banner_Toolchain
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Toolchain
 tags:
   - hpc
   - debugging
 author: beau-paisley
 related: []
-
 ---
 
 If you work in the Rocky Mountain region and you can spell HPC, you have probably heard of the Rocky Mountain Advanced Computing Consortium (RMACC) HPC Symposium.   This is an excellent conference that provides an intimate environment for connecting with colleagues and always has a rich agenda with content for attendees ranging from students to veteran practitioners.   At this year’s event I had the opportunity to present on debugging methodology.   Preparing for this event reminded me of the importance of good methodology so I want to revisit and continue the topic here.   The state of debugging tools has advanced dramatically since your grandma first entered a write(*,*) statement in her code deck but unfortunately the adoption of best practices in debugging still has room for improvement.
