--- a/src/content/blogs/debugging-while-you-sleep-using-linaro-ddt.mdx
+++ b/src/content/blogs/debugging-while-you-sleep-using-linaro-ddt.mdx
@@ -1,14 +1,15 @@
 ---
 title: Debugging while you sleep using Linaro DDT
-description: In this blog we talk about how to debug offline using Linaro DDT.
-  Read more here!
+description: >-
+  In this blog we talk about how to debug offline using Linaro DDT. Read more
+  here!
 date: 2018-04-24T11:57:38.000Z
-image: linaro-website/images/blog/DataCenter
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/DataCenter
 tags:
   - hpc
 author: beau-paisley
 related: []
-
 ---
 
 I like sleep. Sleep is good. With plenty of sleep I address the day with vigor, and approach the duties of the day with zeal. So, when I discovered how to debug while I slept I was excited and I think that you will be excited too.
