--- a/src/content/blogs/debugging-while-you-sleep-with-ddt.mdx
+++ b/src/content/blogs/debugging-while-you-sleep-with-ddt.mdx
@@ -1,14 +1,15 @@
 ---
 title: More Debugging While You Sleep with DDT
-description: In this blog we provide a step by step guide to debugging with
-  Linaro DDT. Read more here!
+description: >-
+  In this blog we provide a step by step guide to debugging with Linaro DDT.
+  Read more here!
 date: 2019-04-02T01:53:28.000Z
-image: linaro-website/images/blog/Datacenter
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Datacenter
 tags:
   - hpc
 author: beau-paisley
 related: []
-
 ---
 
 It’s been close to a year since my first [Debugging While You Sleep blog](https://www.linaro.org/blog/debugging-while-you-sleep-using-linaro-ddt/) on offline debugging with the Linaro DDT HPC debugger.  A lot of bugs have passed under the bridge and I know that the next year will bring many more but along with healthy living, offline debugging will ensure that there are very few sleepless nights!
