--- a/src/content/blogs/expanding-profiling-capabilities-with-windowsperf-372-release.mdx
+++ b/src/content/blogs/expanding-profiling-capabilities-with-windowsperf-372-release.mdx
@@ -1,13 +1,15 @@
 ---
 title: Expanding profiling capabilities with WindowsPerf 3.7.2 release
-description: Everything you need to know about the latest Windows Perf 3.7.2 release and its profiling capabilities
+description: >-
+  Everything you need to know about the latest Windows Perf 3.7.2 release and
+  its profiling capabilities
 date: 2024-09-10T09:00:00.000Z
-image: /linaro-website/images/blog/circuit_gyxicz.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/circuit_gyxicz.jpg
 tags:
   - windows-on-arm
 author: przemyslaw-wirkus
 related: []
-
 ---
 
 We are happy to announce the latest [WindowsPerf bug-fix release ver. 3.7.2](https://gitlab.com/Linaro/WindowsPerf/windowsperf/-/releases/3.7.2). This release based on [ver. 3.5.0-beta](https://gitlab.com/Linaro/WindowsPerf/windowsperf/-/releases/3.5.0-beta) is a continuation of WindowsPerf development effort. Current release focuses on extending profiling capabilities and user-space functionality. For previous releases check our [GitLab release page](https://gitlab.com/Linaro/WindowsPerf/windowsperf/-/releases).
