--- a/src/content/blogs/forge-thread-affinity-advisor.mdx
+++ b/src/content/blogs/forge-thread-affinity-advisor.mdx
@@ -1,14 +1,15 @@
 ---
 title: Discover Optimal Performance with Linaro Forge's Thread Affinity Advisor
 description: >
-  Thread Affinity Advisor: Empowering users with insight into their underlying hardware's CPU memory hierarchy
+  Thread Affinity Advisor: Empowering users with insight into their underlying
+  hardware's CPU memory hierarchy
 date: 2024-11-20T00:00:00.000Z
-image: linaro-website/images/blog/empowered_developer_dxh30d.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/empowered_developer_dxh30d.jpg
 tags:
   - hpc
 author: rudy-shand
 related: []
-
 ---
 import CloudinaryImg from "../../components/cloudinary/CloudinaryImg.astro";
 
