--- a/src/content/blogs/hardening-u-boot-https-with-ca-certificate-management.mdx
+++ b/src/content/blogs/hardening-u-boot-https-with-ca-certificate-management.mdx
@@ -1,15 +1,16 @@
 ---
 title: Hardening U-Boot's HTTPS with CA Certificate Management
 description: >
-  This blog post documents the introduction of the 'wget cacert' command in U-Boot which adds support for CA Certificates.
+  This blog post documents the introduction of the 'wget cacert' command in
+  U-Boot which adds support for CA Certificates.
 date: 2025-06-12T00:00:00.000Z
-image: linaro-website/images/blog-hero-images/circuit_ogibqv
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog-hero-images/circuit_ogibqv
 tags:
   - u-boot
   - security
 author: jerome-forissier
 related: []
-
 ---
 
 # Introduction
