--- a/src/content/blogs/hidden-jtag-qualcomm-snapdragon-usb.mdx
+++ b/src/content/blogs/hidden-jtag-qualcomm-snapdragon-usb.mdx
@@ -2,13 +2,13 @@
 title: The hidden JTAG in your Qualcomm/Snapdragon device’s USB port
 description: Learn about JTAG and EUD
 date: 2025-06-30T01:00:00.000Z
-image: /linaro-website/images/blog-hero-images/USB_bjjsaa.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog-hero-images/USB_bjjsaa.jpg
 tags:
   - linux-kernel
   - qualcomm
 author: casey-connolly
 related: []
-
 ---
 
 Back in February of this year, Qualcomm [quietly published the source code for interacting with EUD](https://github.com/quic/eud). This is perhaps one of the most exciting things they’ve done lately \- especially if you spend a lot of time debugging the kernel or U-Boot \- let’s talk about it.
