--- a/src/content/blogs/how-implementing-security-txt-a-step-towards-enhanced-cybersecurity-a-linaro-best-practice.mdx
+++ b/src/content/blogs/how-implementing-security-txt-a-step-towards-enhanced-cybersecurity-a-linaro-best-practice.mdx
@@ -1,17 +1,19 @@
 ---
-title: How Implementing Security.txt? A Step Towards Enhanced Cybersecurity, a
-  Linaro Best Practice
-description: Learn how to implement Security.txt on your website with this
-  comprehensive guide from Linaro. Understand the significance of Security.txt,
-  its framework, and global adoption, and discover best practices for enhancing
-  your website's cybersecurity.
+title: >-
+  How Implementing Security.txt? A Step Towards Enhanced Cybersecurity, a Linaro
+  Best Practice
+description: >-
+  Learn how to implement Security.txt on your website with this comprehensive
+  guide from Linaro. Understand the significance of Security.txt, its framework,
+  and global adoption, and discover best practices for enhancing your website's
+  cybersecurity.
 date: 2024-03-20T03:34:22.000Z
-image: linaro-website/images/blog/Banner_Security
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Security
 tags:
   - security
 author: joakim-bech
 related: []
-
 ---
 
 This article aims to inform readers about the significance of "security.txt", its framework, global adoption, and provides a straightforward implementation guide to encourage its widespread use showing how in Linaro we’ve done it.
