--- a/src/content/blogs/how-to-build-and-test-the-linux-kernel-locally.mdx
+++ b/src/content/blogs/how-to-build-and-test-the-linux-kernel-locally.mdx
@@ -6,13 +6,13 @@ description: >
   at Tuxsuite, a tool created by Linaro to make building and testing Linux
   kernels easier. 
 date: 2024-05-07T02:31:55.000Z
-image: linaro-website/images/blog/Banner_Toolchain
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Toolchain
 tags:
   - testing
   - linux-kernel
 author: alok-ranjan
 related: []
-
 ---
 
 # Introduction
