--- a/src/content/blogs/how-to-create-a-virtual-system-control-and-management-interface-scmi-server.mdx
+++ b/src/content/blogs/how-to-create-a-virtual-system-control-and-management-interface-scmi-server.mdx
@@ -1,16 +1,17 @@
 ---
 title: How to create a virtual System Control and Management Interface (SCMI) server
-description: This blog talks about the creation of a virtual SCMI server to fill
-  the gap through the SCMI project. It also demonstrates how the concept of
-  virtual SCP and SCMI server can be extended to other systems, providing a
-  virtual power coprocessor to VMs and SPs as an example.
+description: >-
+  This blog talks about the creation of a virtual SCMI server to fill the gap
+  through the SCMI project. It also demonstrates how the concept of virtual SCP
+  and SCMI server can be extended to other systems, providing a virtual power
+  coprocessor to VMs and SPs as an example.
 date: 2023-06-22T01:31:47.000Z
-image: linaro-website/images/blog/Datacenter
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Datacenter
 tags:
   - linux-kernel
 author: vincent-guittot
 related: []
-
 ---
 
 ## Why do we need a virtual power coprocessor ?
