--- a/src/content/blogs/how-to-emulate-trusted-platform-module-in-qemu-with-u-boot.mdx
+++ b/src/content/blogs/how-to-emulate-trusted-platform-module-in-qemu-with-u-boot.mdx
@@ -1,13 +1,15 @@
 ---
 title: How to emulate Trusted Platform module in QEMU with U-Boot
-description: In this blog, Linaro Tech Lead Ilias Apalodimas provides a step by step guide to emulating Trusted Platform module in QEMU with U-Boot. Read more here!
+description: >-
+  In this blog, Linaro Tech Lead Ilias Apalodimas provides a step by step guide
+  to emulating Trusted Platform module in QEMU with U-Boot. Read more here!
 date: 2022-01-06T01:21:12.000Z
-image: /linaro-website/images/blog/tech_background_1.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/tech_background_1.jpg
 tags:
   - u-boot
 author: ilias-apalodimas
 related: []
-
 ---
 # Do I need a Trusted Platform Module (TPM)?
 
