--- a/src/content/blogs/http-now-supported-in-u-boot.mdx
+++ b/src/content/blogs/http-now-supported-in-u-boot.mdx
@@ -1,14 +1,15 @@
 ---
 title: HTTP now supported in U-boot
-description: In this blog, Paul Liu talks about how HTTP is now supported in
-  U-boot and how you can enable this feature. Read more here!
+description: >-
+  In this blog, Paul Liu talks about how HTTP is now supported in U-boot and how
+  you can enable this feature. Read more here!
 date: 2023-01-24T01:39:16.000Z
-image: linaro-website/images/blog/Banner_Linux_Kernel
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Linux_Kernel
 tags:
   - u-boot
 author: paul-liu
 related: []
-
 ---
 
 ## I﻿ntroduction
