--- a/src/content/blogs/improvements-to-gcc-s-code-gen-for-vector-initialization-on-aarch64.mdx
+++ b/src/content/blogs/improvements-to-gcc-s-code-gen-for-vector-initialization-on-aarch64.mdx
@@ -6,7 +6,8 @@ description: >-
 
   examples of the improvements, and the rationale behind them.
 date: 2023-10-09T11:37:37.000Z
-image: linaro-website/images/blog/Banner_Toolchain
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Toolchain
 tags:
   - toolchain
 author: prathamesh-kulkarni
