--- a/src/content/blogs/initial-u-boot-release-for-qualcomm-platforms.mdx
+++ b/src/content/blogs/initial-u-boot-release-for-qualcomm-platforms.mdx
@@ -1,8 +1,11 @@
 ---
 title: Initial U-Boot release for Qualcomm platforms
-description: Today we announce the first binary release of U-Boot for Qualcomm boards, following a year long bringup and upstreaming effort.
+description: >-
+  Today we announce the first binary release of U-Boot for Qualcomm boards,
+  following a year long bringup and upstreaming effort.
 date: 2024-08-21T01:53:28.000Z
-image: linaro-website/images/blog/U-Boot_blg_esrd1w.png
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/U-Boot_blg_esrd1w.png
 tags:
   - qualcomm
   - u-boot
