--- a/src/content/blogs/installing-fedora-with-uefi-http-boot.mdx
+++ b/src/content/blogs/installing-fedora-with-uefi-http-boot.mdx
@@ -1,12 +1,13 @@
 ---
-title: "Installing Fedora with UEFI HTTP boot "
+title: 'Installing Fedora with UEFI HTTP boot '
 description: >
   With the addition of UEFI HTTP Boot support in U-Boot on a SystemReady-IR
   platform we can install and run Fedora on the fly instead of using a local
   media.  Let’s see how we can use the feature and install a standard Fedora
   distro on the fly, instead of installing it via local media.
 date: 2024-01-19T03:00:49.000Z
-image: linaro-website/images/blog/Banner_Virtualization
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Virtualization
 tags:
   - iot-embedded
   - u-boot
@@ -14,7 +15,6 @@ tags:
   - edge
 author: masahisa-kojima
 related: []
-
 ---
 
 # Introduction
