--- a/src/content/blogs/introducing-1-0-0-beta-release-of-windowsperf-visual-studio-extension.mdx
+++ b/src/content/blogs/introducing-1-0-0-beta-release-of-windowsperf-visual-studio-extension.mdx
@@ -1,16 +1,17 @@
 ---
 title: Introducing 1.0.0-beta release of WindowsPerf Visual Studio extension
-description: "Introducing WindowsPerf 1.0.0-beta Visual Studio extension:
-  Explore the new sampling feature for optimized code performance. Dive deep
-  into what's already there, tutorial steps, and upcoming features in this
-  Linaro open-source initiative. Download and be a part of our journey!"
+description: >-
+  Introducing WindowsPerf 1.0.0-beta Visual Studio extension: Explore the new
+  sampling feature for optimized code performance. Dive deep into what's already
+  there, tutorial steps, and upcoming features in this Linaro open-source
+  initiative. Download and be a part of our journey!
 date: 2023-10-02T09:31:29.000Z
-image: linaro-website/images/blog/Code_Image_Core_tech
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Code_Image_Core_tech
 tags:
   - windows-on-arm
 author: nader-zouaoui
 related: []
-
 ---
 
 The [WindowsPerf](https://gitlab.com/Linaro/WindowsPerf/windowsperf) team proudly presents the 1.0.0-beta release of their Visual Studio extension, focusing on a dynamic sampling feature for optimised code performance. This version of the extension is compatible starting with WindowsPerf [3.0.0](https://gitlab.com/Linaro/WindowsPerf/windowsperf/-/releases/3.0.0)!
