--- a/src/content/blogs/introducing-the-windowsperf-gui-the-visual-studio-2022-extension.mdx
+++ b/src/content/blogs/introducing-the-windowsperf-gui-the-visual-studio-2022-extension.mdx
@@ -1,10 +1,12 @@
 ---
-title: "Introducing the WindowsPerf GUI: the Visual Studio 2022 extension"
-description: "In this blog, learn about the WindowsPerf GUI, a powerful Visual
-  Studio 2022 extension developed by the WindowsPerf team. Find out more about
-  what exactly WindowsPerf is, and why we need a graphical interface. "
+title: 'Introducing the WindowsPerf GUI: the Visual Studio 2022 extension'
+description: >-
+  In this blog, learn about the WindowsPerf GUI, a powerful Visual Studio 2022
+  extension developed by the WindowsPerf team. Find out more about what exactly
+  WindowsPerf is, and why we need a graphical interface. 
 date: 2023-09-03T23:09:28.000Z
-image: linaro-website/images/blog/Chip_background_UNDER_2MB
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Chip_background_UNDER_2MB
 tags:
   - windows-on-arm
 author: nader-zouaoui
