--- a/src/content/blogs/introduction-to-kmemdump.mdx
+++ b/src/content/blogs/introduction-to-kmemdump.mdx
@@ -3,13 +3,13 @@ title: Introduction to Kmemdump
 description: |
   A smarter way to Capture Crash Data on Embedded Linux Devices
 date: 2025-06-18T00:00:00.000Z
-image: linaro-website/images/blog-hero-images/embedded_grey_uoo2mb
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog-hero-images/embedded_grey_uoo2mb
 tags:
   - linux-kernel
   - iot-embedded
 author: eugen-hristev
 related: []
-
 ---
 
 # How Linaro Started Kmemdump
