--- a/src/content/blogs/journey-to-systemready-compliance-in-u-boot.mdx
+++ b/src/content/blogs/journey-to-systemready-compliance-in-u-boot.mdx
@@ -6,7 +6,8 @@ description: >
   vision.  Linaros’ Edge and Fog Computing group (LEDGE) led the roadmap and
   development turning U-Boot into the first SystemReady-IR compliant bootloader.
 date: 2023-09-05T10:48:35.000Z
-image: linaro-website/images/blog/tech_background__under_2mb
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/tech_background__under_2mb
 tags:
   - iot-embedded
   - u-boot
@@ -15,7 +16,6 @@ tags:
   - edge
 author: ilias-apalodimas
 related: []
-
 ---
 
 ## Where it all started
