--- a/src/content/blogs/launching -windowsperf-visual-studio-extension-v210.mdx
+++ b/src/content/blogs/launching -windowsperf-visual-studio-extension-v210.mdx
@@ -1,14 +1,20 @@
 ---
-title: "Launching WindowsPerf Visual Studio Extension v2.1.0"
+title: Launching WindowsPerf Visual Studio Extension v2.1.0
 description: >
-  We’re thrilled to announce the new release to the Visual Studio Marketplace of the WindowsPerf Visual Studio Extension, version 2.1.0. This major update introduces essential features designed to enhance performance profiling on Windows on Arm. This version is compatible with WindowsPerf 3.7.2. WindowsPerf is a performance profiling tool inspired by Linux Perf, tailored for Windows on Arm. It utilizes the Arm Performance Monitor Unit (PMU) and its hardware counters to deliver Arm CPU microarchitecture profiling capabilities.
+  We’re thrilled to announce the new release to the Visual Studio Marketplace of
+  the WindowsPerf Visual Studio Extension, version 2.1.0. This major update
+  introduces essential features designed to enhance performance profiling on
+  Windows on Arm. This version is compatible with WindowsPerf 3.7.2. WindowsPerf
+  is a performance profiling tool inspired by Linux Perf, tailored for Windows
+  on Arm. It utilizes the Arm Performance Monitor Unit (PMU) and its hardware
+  counters to deliver Arm CPU microarchitecture profiling capabilities.
 date: 2024-08-06T09:00:00.000Z
-image: /linaro-website/images/blog/circuit_gyxicz.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/circuit_gyxicz.jpg
 tags:
   - windows-on-arm
 author: nader-zouaoui
 related: []
-
 ---
 
 We’re thrilled to announce the new release to the Visual Studio Marketplace of the WindowsPerf Visual Studio Extension, version 2.1.0. This major update introduces essential features designed to enhance performance profiling on Windows on Arm. This version is compatible with [WindowsPerf 3.7.2](https://gitlab.com/Linaro/WindowsPerf/windowsperf/-/releases/3.7.2). WindowsPerf is a performance profiling tool inspired by Linux Perf, tailored for Windows on Arm. It utilizes the Arm Performance Monitor Unit (PMU) and its hardware counters to deliver Arm CPU microarchitecture profiling capabilities.
