--- a/src/content/blogs/let-s-boot-the-mainline-linux-kernel-on-qualcomm-devices.mdx
+++ b/src/content/blogs/let-s-boot-the-mainline-linux-kernel-on-qualcomm-devices.mdx
@@ -4,13 +4,13 @@ description: >
   In this blog, Vinod Koul shares detailed instructions to get started with the
   mainline Linux kernel on arm64 Qualcomm Snapdragon based devices.
 date: 2021-10-28T07:29:06.000Z
-image: linaro-website/images/blog/tech_background_1
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/tech_background_1
 tags:
   - linux-kernel
   - arm
 author: vinod-koul
 related: []
-
 ---
 
 One of the benefits of Linaro Core and Club memberships is the option to have a Landing Team. A Landing Team is a group of Linaro engineers which is dedicated to one Linaro member, and whose work contributes to both private and public projects. Beginning in 2014, the Linaro Qualcomm Landing Team has been an active contributor to upstream Qualcomm platforms, building stable releases for the 96Boards Dragonboard program and adding support to the next generation Qualcomm mobile platforms. Fostering and partnering with the open source community is a primary goal of this Landing Team, often in the role of maintainers for Qualcomm sub-systems.
