--- a/src/content/blogs/linaro-at-open-euler-sig.mdx
+++ b/src/content/blogs/linaro-at-open-euler-sig.mdx
@@ -1,9 +1,17 @@
 ---
-title: "Linaro at openEuler SIG Gathering 2024"
+title: Linaro at openEuler SIG Gathering 2024
 description: >
-  The openEuler Special Interest Group (SIG) Gathering was held in Beijing on July 26th 2024. This was the first event of this type for the openEuler community. There were around 300 developers in the conference, discussing the next stage plan for openEuler community. The topics were divided into 6 tracks: Diversity Computing Power, AI Native support, Full-Scenario Application, openEuler Native development, Upstream Native Support and User experience Research. In this blog, we will look at some of the highlights from this event.
+  The openEuler Special Interest Group (SIG) Gathering was held in Beijing on
+  July 26th 2024. This was the first event of this type for the openEuler
+  community. There were around 300 developers in the conference, discussing the
+  next stage plan for openEuler community. The topics were divided into 6
+  tracks: Diversity Computing Power, AI Native support, Full-Scenario
+  Application, openEuler Native development, Upstream Native Support and User
+  experience Research. In this blog, we will look at some of the highlights from
+  this event.
 date: 2024-07-26T16:05:00.000Z
-image: /linaro-website/images/blog/openEuler_SIG_Gathering_2024_co8kji.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/openEuler_SIG_Gathering_2024_co8kji.jpg
 tags:
   - datacenter
   - open-source
