--- a/src/content/blogs/linaro-at-open-source-summit-europe-and-linux-plumbers-2024.mdx
+++ b/src/content/blogs/linaro-at-open-source-summit-europe-and-linux-plumbers-2024.mdx
@@ -1,15 +1,19 @@
 ---
 title: Linaro at Open Source Summit Europe & Linux Plumbers 2024
-description: Open Source Summit (OSS) Europe is one of the leading events for open source developers to come together and collaborate. The latest OSS took place in Vienna 16-18 September. Linaro had a strong presence with a booth as well as multiple technical sessions.
+description: >-
+  Open Source Summit (OSS) Europe is one of the leading events for open source
+  developers to come together and collaborate. The latest OSS took place in
+  Vienna 16-18 September. Linaro had a strong presence with a booth as well as
+  multiple technical sessions.
 date: 2024-10-08T09:00:00.000Z
-image: linaro-website/images/blog/OSS_Booth_2024_wvdkxc.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/OSS_Booth_2024_wvdkxc.jpg
 tags:
   - arm
   - open-source
   - linux-kernel
 author: linaro
 related: []
-
 ---
 
 Open Source Summit (OSS) Europe is one of the leading events for open source developers to come together and collaborate. The latest OSS took place in Vienna 16-18 September. Linaro had a strong presence with a booth as well as multiple technical sessions. 
