--- a/src/content/blogs/linaro-at-the-confidential-computing-summit-2024.mdx
+++ b/src/content/blogs/linaro-at-the-confidential-computing-summit-2024.mdx
@@ -2,12 +2,12 @@
 title: Linaro At The Confidential Computing Summit 2024
 description: Linaro At The Confidential Computing Summit 2024
 date: 2024-07-15T09:00:00.000Z
-image: linaro-website/images/blog/ccs2024-image1_re3oo6.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/ccs2024-image1_re3oo6.jpg
 tags:
   - security
 author: mathieu-poirier
 related: []
-
 ---
 Organized by the [Confidential Computing Consortium](https://confidentialcomputing.io/) and [Opaque](https://www.opaque.co/), Confidential Computing Summit (CCS) is a conference that brings together a community of actors working in the field of confidential computing.  Its goal is to promote the collaboration and dialog between HW vendors, cloud providers and software developers to drive forward the technology while embracing open collaboration.  Linaro has been active in the area of confidential computing for over two years and took part in the event to bring awareness to the solution it is putting forward.   
 
