--- a/src/content/blogs/linaro-connect-2025-demo-friday.mdx
+++ b/src/content/blogs/linaro-connect-2025-demo-friday.mdx
@@ -1,15 +1,16 @@
 ---
 title: Linaro Connect 2025 Demo Friday - Introducing our Demos
 description: >
-  This year we have got twenty demos planned - check out this blog to learn about the demos that will be on display.
+  This year we have got twenty demos planned - check out this blog to learn
+  about the demos that will be on display.
 date: 2025-05-06T09:00:00.000Z
-image: /linaro-website/images/blog/Connect_25_Demo_Friday_jlbyva.png
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Connect_25_Demo_Friday_jlbyva.png
 tags:
   - open-source
   - arm
 author: linaro
 related: []
-
 ---
 
 One week to go until Linaro Connect starts!
