--- a/src/content/blogs/linaro-contributions-to-the-6-2-linux-kernel-release.mdx
+++ b/src/content/blogs/linaro-contributions-to-the-6-2-linux-kernel-release.mdx
@@ -1,16 +1,17 @@
 ---
 title: Linaro Contributions to the 6.2 Linux Kernel Release
-description: In this blog we talk about the contributions Linaro made to the 6.2
-  Linux Kernel Release. Read more here!
+description: >-
+  In this blog we talk about the contributions Linaro made to the 6.2 Linux
+  Kernel Release. Read more here!
 date: 2023-03-02T02:11:44.000Z
-image: linaro-website/images/blog/30921180788_34ce2cd5f8_c
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/30921180788_34ce2cd5f8_c
 tags:
   - linux-kernel
   - open-source
   - arm
 author: linaro
 related: []
-
 ---
 
 ![Most active 6.2 Employers](/linaro-website/images/blog/most-active-6.2-employers)
