--- a/src/content/blogs/linaro-contributions-to-the-6-4-linux-kernel-release.mdx
+++ b/src/content/blogs/linaro-contributions-to-the-6-4-linux-kernel-release.mdx
@@ -1,17 +1,17 @@
 ---
 title: Linaro Contributions to the 6.4 Linux Kernel Release
-description: In this blog, we discuss the 6.4 kernel release, which was
-  published last week & featured Linaro yet again in the top five contributors
-  to the Linux kernel.
+description: >-
+  In this blog, we discuss the 6.4 kernel release, which was published last week
+  & featured Linaro yet again in the top five contributors to the Linux kernel.
 date: 2023-07-04T11:59:08.000Z
-image: linaro-website/images/blog/Banner_Linux_Kernel
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Linux_Kernel
 tags:
   - linux-kernel
   - open-source
   - arm
 author: linaro
 related: []
-
 ---
 
 ![Most active 6.4 employers](/linaro-website/images/blog/most-active-6.4-employers)
