--- a/src/content/blogs/linaro-contributions-to-the-6-5-linux-kernel-release.mdx
+++ b/src/content/blogs/linaro-contributions-to-the-6-5-linux-kernel-release.mdx
@@ -1,18 +1,19 @@
 ---
 title: Linaro Contributions to the 6.5 Linux Kernel Release
-description: In this blog post, we engage with Linaro Engineers who have been
-  recognized by LWN as some of the most active developers in the 6.5 Kernel
-  Release. We delve into their significant contributions and insights into the
-  Linux kernel development process.
+description: >-
+  In this blog post, we engage with Linaro Engineers who have been recognized by
+  LWN as some of the most active developers in the 6.5 Kernel Release. We delve
+  into their significant contributions and insights into the Linux kernel
+  development process.
 date: 2023-09-15T02:41:10.000Z
-image: linaro-website/images/blog/Banner_Linux_Kernel
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Linux_Kernel
 tags:
   - linux-kernel
   - arm
   - open-source
 author: linaro
 related: []
-
 ---
 
 ![Most active 6.5 employers](/linaro-website/images/blog/most-active-6.5-employers)
