--- a/src/content/blogs/linaro-devboards-power-up-android-15-right-on-launch-day.mdx
+++ b/src/content/blogs/linaro-devboards-power-up-android-15-right-on-launch-day.mdx
@@ -1,15 +1,15 @@
 ---
-title: "Linaro Devboards Power Up Android 15 Right on Launch Day"
+title: Linaro Devboards Power Up Android 15 Right on Launch Day
 description: Android 15 boots on Linaro reference devboards on the day of its release
 date: 2024-09-06T00:00:00.000Z
-image: /linaro-website/images/blog/image1_z6o8ic.png
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/image1_z6o8ic.png
 tags:
   - android
   - qualcomm
   - hisilicon
 author: amit-pundir
 related: []
-
 ---
 
 The source code for the latest Android release - Android 15 - is out! The android15-release branch in the Android Open Source Project (AOSP) boots straight out of the box on the Linaro supported reference Boards - Snapdragon 8 Gen 2 devboard (SM8550-HDK), Qualcomm Robotics Board RB5, Qualcomm Dragonboard 845c (DB845c, aka RB3) and HiSilicon Hikey960.
