--- a/src/content/blogs/linaro-enables-op-tee-rpmb-access-directly-from-the-linux-kernel.mdx
+++ b/src/content/blogs/linaro-enables-op-tee-rpmb-access-directly-from-the-linux-kernel.mdx
@@ -1,8 +1,17 @@
 ---
-title: "Linaro enables OP-TEE RPMB access directly from the Linux Kernel"
-description: Tee-supplicant, the user space application in the OP-TEE solution has been responsible for the communication with the RPMB (Replay Protected Memory Block) device. This however, also meant that access to secure storage hasn't been available until the system has been fully up and running. Nowadays functionality depends on the secure storage being up and running early – e.g implementing a firmware TPM to enhance the system security. To address this issue, Linaro have worked on and upstreamed support enabling RPMB access directly from Linux kernel before user space has been started.
+title: Linaro enables OP-TEE RPMB access directly from the Linux Kernel
+description: >-
+  Tee-supplicant, the user space application in the OP-TEE solution has been
+  responsible for the communication with the RPMB (Replay Protected Memory
+  Block) device. This however, also meant that access to secure storage hasn't
+  been available until the system has been fully up and running. Nowadays
+  functionality depends on the secure storage being up and running early – e.g
+  implementing a firmware TPM to enhance the system security. To address this
+  issue, Linaro have worked on and upstreamed support enabling RPMB access
+  directly from Linux kernel before user space has been started.
 date: 2024-10-22T00:00:00.000Z
-image: linaro-website/images/blog/Virtualization_image_x3vb2d.png
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Virtualization_image_x3vb2d.png
 tags:
   - system-ready
 author: ilias-apalodimas
