--- a/src/content/blogs/linaro-forge-empowering-the-energy-sector-at-the-rice-university-energy-hpc-conference.mdx
+++ b/src/content/blogs/linaro-forge-empowering-the-energy-sector-at-the-rice-university-energy-hpc-conference.mdx
@@ -1,17 +1,19 @@
 ---
-title: "Linaro Forge: Empowering the Energy Sector at the Rice University Energy
-  HPC Conference"
-description: Join Linaro Forge at the Rice University Energy HPC Conference in
-  Houston to explore how our high-performance computing solutions are driving
-  innovation in the energy sector. From traditional energy exploration to
-  renewable sources, discover how we're empowering sustainability and efficiency
+title: >-
+  Linaro Forge: Empowering the Energy Sector at the Rice University Energy HPC
+  Conference
+description: >-
+  Join Linaro Forge at the Rice University Energy HPC Conference in Houston to
+  explore how our high-performance computing solutions are driving innovation in
+  the energy sector. From traditional energy exploration to renewable sources,
+  discover how we're empowering sustainability and efficiency
 date: 2024-02-25T21:54:36.000Z
-image: linaro-website/images/blog/Code_Upstream_72
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Code_Upstream_72
 tags:
   - hpc
 author: linaro
 related: []
-
 ---
 
 The Linaro Forge team is thrilled to announce our continued sponsorship and participation at the Rice University Energy HPC Conference in Houston. For more than a decade, we have been a proud supporter of this paramount event, which stands as the global summit for technical and business leaders in the energy sector. This conference serves as a vital platform for sharing insights, presenting technical findings, and contemplating the future landscape of the energy industry. Linaro’s commitment to this gathering reflects the dedication of the Linaro Forge team to the energy sector and our role in its ongoing evolution.
