--- a/src/content/blogs/linaro-forge-version-23-now-available.mdx
+++ b/src/content/blogs/linaro-forge-version-23-now-available.mdx
@@ -1,14 +1,15 @@
 ---
 title: Linaro Forge Version 23 Now Available
-description: In this blog we talk about the new Linaro Forge Version 23 release
-  and all the improvements that have been introduced. Read more here!
+description: >-
+  In this blog we talk about the new Linaro Forge Version 23 release and all the
+  improvements that have been introduced. Read more here!
 date: 2023-06-26T08:18:18.000Z
-image: linaro-website/images/blog/Toolchain_72
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Toolchain_72
 tags:
   - hpc
 author: beau-paisley
 related: []
-
 ---
 
 The Forge team is pleased to announce [our first major release as part of Linaro](https://www.linaroforge.com/downloadForge/). This release includes myriad enhancements, improvements, and fixes and we are proud to have it out the door on time with all of the commitments that were made long before Linaro was a twinkle in our eye.  Moving to Linaro created a lot of unforeseen tasks such as setting up new laptops, learning new IT systems, new employee paperwork,  etc. but the team knuckled down and got it done.   This blog will provide a survey of the new capabilities and you can expect to see more in depth details in the future.  We encourage you to reach out to the team at **sales@forge.linaro.com** for a personal in-depth overview of what’s new.
