--- a/src/content/blogs/linaro-fosdem-2024.mdx
+++ b/src/content/blogs/linaro-fosdem-2024.mdx
@@ -6,7 +6,8 @@ description: >
   and contribution to the open source ecosystem, presented eight talks, setting
   a new record for their presence and acceptance ratio at the event.
 date: 2024-02-21T03:11:10.000Z
-image: linaro-website/images/blog/fkmo2oqwyaio783
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/fkmo2oqwyaio783
 tags:
   - u-boot
   - toolchain
@@ -14,7 +15,6 @@ tags:
   - testing
 author: linaro
 related: []
-
 ---
 
 The Université libre de Bruxelles held the event on February 3rd and 4th, and the program was more prosperous than ever. FOSDEM is always considered the best IT conference and it is entirely volunteer driven. Linaro attended the event with eight talks (having submitted about a dozen): a record-breaking presence and acceptance ratio! Beer was constantly flowing at Fosdem, yet there is no indication that Belgian beer is much better this year to draw the attention of so many of the following Linaro open-source contributors.
