--- a/src/content/blogs/linaro-iot-and-embedded-group-lite-announces-mission-accomplished.mdx
+++ b/src/content/blogs/linaro-iot-and-embedded-group-lite-announces-mission-accomplished.mdx
@@ -1,17 +1,18 @@
 ---
 title: Linaro IoT and Embedded Group (LITE) announces “Mission Accomplished"
-description: This blog  highlight the achievements of Linaro's IoT & Embedded
-  Group in the realm of supporting Arm-based MCUs in the IoT space. Their open
-  source projects have successfully implemented architecture support, security
+description: >-
+  This blog  highlight the achievements of Linaro's IoT & Embedded Group in the
+  realm of supporting Arm-based MCUs in the IoT space. Their open source
+  projects have successfully implemented architecture support, security
   integration, and end-to-end best practices. Discover more about their
   accomplishments.
 date: 2023-06-27T07:00:26.000Z
-image: linaro-website/images/blog/IoT_Planet_UNDER_2MB
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/IoT_Planet_UNDER_2MB
 tags:
   - iot-embedded
 author: bill-fletcher
 related: []
-
 ---
 
 ## Rich vs Constrained Operating Systems
