--- a/src/content/blogs/linaro-releases-ledge-reference-platform-v0-2.mdx
+++ b/src/content/blogs/linaro-releases-ledge-reference-platform-v0-2.mdx
@@ -1,13 +1,18 @@
 ---
 title: Linaro releases LEDGE Reference Platform v0.2
-description: The majority of consumer electronics now consist of an abandoned firmware paired with an old kernel version. To make matters worse, those devices rarely support updates of either their firmware or software. There is a need for best practises for Firmware-OS interaction and its security extensions, to increase the security and maintainability of those devices.
+description: >-
+  The majority of consumer electronics now consist of an abandoned firmware
+  paired with an old kernel version. To make matters worse, those devices rarely
+  support updates of either their firmware or software. There is a need for best
+  practises for Firmware-OS interaction and its security extensions, to increase
+  the security and maintainability of those devices.
 date: 2021-05-20T01:21:12.000Z
-image: /linaro-website/images/blog/tech_background_1.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/tech_background_1.jpg
 tags:
   - u-boot
 author: ilias-apalodimas
 related: []
-
 ---
 
 The majority of consumer electronics now consist of an abandoned firmware paired with an old kernel version. To make matters worse, those devices rarely support updates of either their firmware or software. There is a need for best practises for Firmware-OS interaction and its security extensions, to increase the security and maintainability of those devices.
