--- a/src/content/blogs/linaro-top-contributor-to-the-6-3-linux-kernel-release.mdx
+++ b/src/content/blogs/linaro-top-contributor-to-the-6-3-linux-kernel-release.mdx
@@ -1,15 +1,15 @@
 ---
 title: Linaro top contributor to the 6.3 Linux Kernel Release
-description: In this blog, we celebrate some of our Kernel Engineers whose work
-  resulted in Linaro being the top contributor to the 6.3 Linux Kernel. Read
-  more here!
+description: >-
+  In this blog, we celebrate some of our Kernel Engineers whose work resulted in
+  Linaro being the top contributor to the 6.3 Linux Kernel. Read more here!
 date: 2023-05-02T00:23:41.000Z
-image: linaro-website/images/blog/30921180788_34ce2cd5f8_c
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/30921180788_34ce2cd5f8_c
 tags:
   - linux-kernel
 author: linaro
 related: []
-
 ---
 
 ![Most active 6.3 Employers](/linaro-website/images/blog/6.3-most-active-employers)
