--- a/src/content/blogs/linux-on-snapdragon-x-elite.mdx
+++ b/src/content/blogs/linux-on-snapdragon-x-elite.mdx
@@ -1,9 +1,11 @@
 ---
-title: "Linux on Snapdragon X Elite: Linaro and Tuxedo Pave the Way for ARM64 Laptops"
+title: 'Linux on Snapdragon X Elite: Linaro and Tuxedo Pave the Way for ARM64 Laptops'
 description: >
-  Linaro Connect 2025 showcases progress in bringing Linux on Snapdragon-Powered Devices
+  Linaro Connect 2025 showcases progress in bringing Linux on Snapdragon-Powered
+  Devices
 date: 2025-07-23T08:00:00.000Z
-image: linaro-website/images/blog/4d2dae06-d294-4d4b-aeb2-56bc4f76d94a_vudrqm.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/4d2dae06-d294-4d4b-aeb2-56bc4f76d94a_vudrqm.jpg
 tags:
   - qualcomm
   - open-source
