--- a/src/content/blogs/mastering-memory-debugging-with-linaro-ddt.mdx
+++ b/src/content/blogs/mastering-memory-debugging-with-linaro-ddt.mdx
@@ -2,7 +2,8 @@
 title: Mastering Memory Debugging with Linaro DDT
 description: Mastering Memory Debugging with Linaro DDT
 date: 2025-05-01T08:00:00.000Z
-image: linaro-website/images/blog/Forge_DDT_banner_bfakfv.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Forge_DDT_banner_bfakfv.jpg
 tags:
   - hpc
 author: rudy-shand
