--- a/src/content/blogs/multi-circular-queue-mcq-support-gets-added-to-the-ufs-subsystem.mdx
+++ b/src/content/blogs/multi-circular-queue-mcq-support-gets-added-to-the-ufs-subsystem.mdx
@@ -1,15 +1,16 @@
 ---
 title: Multi-Circular Queue (MCQ) support gets added to the UFS subsystem
-description: In this blog, we look at Multi-Circular Queue (MCQ) support and how
-  it is being implemented in the Linux kernel. Click here to read more!
+description: >-
+  In this blog, we look at Multi-Circular Queue (MCQ) support and how it is
+  being implemented in the Linux kernel. Click here to read more!
 date: 2023-02-14T01:21:12.000Z
-image: linaro-website/images/blog/Banner_Virtualization
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Virtualization
 tags:
   - linux-kernel
   - qualcomm
 author: manivannan-sadhasivam
 related: []
-
 ---
 
 Universal Flash Storage (UFS) is a flash storage specification aimed at providing high performance and low power storage memory for mobile phones. UFS has been supported in the Linux kernel since v3.4. Specifications for UFS and its associated Host Controller Interface (UFSHCI) are maintained by the JEDEC standards committee. Specifications like these are periodically updated to meet industry needs. The JEDEC committee has recently released v4.0 of the UFS and UFSHCI specifications, improving the performance and data protection of UFS based systems.
