--- a/src/content/blogs/network-latency-with-time-sensitive-networking-on-virtual-machine.mdx
+++ b/src/content/blogs/network-latency-with-time-sensitive-networking-on-virtual-machine.mdx
@@ -1,9 +1,11 @@
 ---
 title: Network Latency with Time Sensitive Networking on Virtual Machine
-description: In this article, we look at how to address Network Latency through
-  Time Sensitive Networking on a Virtual Machine. Read more here!
+description: >-
+  In this article, we look at how to address Network Latency through Time
+  Sensitive Networking on a Virtual Machine. Read more here!
 date: 2023-05-15T08:34:27.000Z
-image: linaro-website/images/blog/Banner_Virtualization
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Virtualization
 tags:
   - virtualization
   - automotive
