--- a/src/content/blogs/new-release-windowsperf-visual-studio-extension-v1000.mdx
+++ b/src/content/blogs/new-release-windowsperf-visual-studio-extension-v1000.mdx
@@ -1,14 +1,15 @@
 ---
-title: "New Release: WindowsPerf Visual Studio Extension v1.0.0"
+title: 'New Release: WindowsPerf Visual Studio Extension v1.0.0'
 description: >
-  We’re excited to announce the release of the WindowsPerf Visual Studio Extension v1.0.0, our first stable release after the beta.
+  We’re excited to announce the release of the WindowsPerf Visual Studio
+  Extension v1.0.0, our first stable release after the beta.
 date: 2024-07-23T09:00:00.000Z
-image: /linaro-website/images/blog/3098222_jmti97.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/3098222_jmti97.jpg
 tags:
   - windows-on-arm
 author: nader-zouaoui
 related: []
-
 ---
 
 We’re excited to announce the release of the [WindowsPerf Visual Studio Extension v1.0.0](https://gitlab.com/Linaro/WindowsPerf/vs-extension/-/releases/v1.0.0), our first stable release after the beta. This version supports most of the available features related to sampling that are currently available on [WindowsPerf 3.3.0](https://gitlab.com/Linaro/WindowsPerf/windowsperf/-/releases) and brings new features, improvements, and bug fixes. The minimum required version of WindowsPerf for the extension to run is version 3.3.0 onwards.
