--- a/src/content/blogs/onelab-at-embedded-world.mdx
+++ b/src/content/blogs/onelab-at-embedded-world.mdx
@@ -1,9 +1,13 @@
 ---
-title: "Linaro to showcase ONELab at Embedded World 2025"
+title: Linaro to showcase ONELab at Embedded World 2025
 description: >
-  At Embedded World 2024, Linaro introduced [ONELab](https://www.linaro.org/solutions/onelab) - a solution which helps Silicon Vendors and Device Makers conduct continuous interoperability tests among different Operating Systems and Cloud Services.
+  At Embedded World 2024, Linaro introduced
+  [ONELab](https://www.linaro.org/solutions/onelab) - a solution which helps
+  Silicon Vendors and Device Makers conduct continuous interoperability tests
+  among different Operating Systems and Cloud Services.
 date: 2025-03-03T00:00:00.000Z
-image: linaro-website/images/blog/ONELab_demo_ddv3ah.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/ONELab_demo_ddv3ah.jpg
 tags:
   - iot-embedded
   - arm
