--- a/src/content/blogs/openssl-for-windows-on-arm.mdx
+++ b/src/content/blogs/openssl-for-windows-on-arm.mdx
@@ -1,14 +1,15 @@
 ---
 title: OpenSSL for Windows on Arm
-description: In this blog we talk about how to enable OpenSSL for Windows on
-  Arm. Read more here!
+description: >-
+  In this blog we talk about how to enable OpenSSL for Windows on Arm. Read more
+  here!
 date: 2023-06-14T00:14:59.000Z
-image: linaro-website/images/blog/Code_Image_Core_tech
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Code_Image_Core_tech
 tags:
   - windows-on-arm
 author: everton-constantino
 related: []
-
 ---
 
 [OpenSSL](https://github.com/openssl/openssl) is one of the most well known open source cryptographic libraries. It is widely used by several different projects and as such is a cornerstone of the open source and enterprise ecosystem as a whole. It has supported Windows for quite some time and as Linaro pushes forward with Windows on Arm enablement, it was a crucial but natural move to enable OpenSSL as well. Here we describe some challenges regarding this enablement and some optimizations we have made.
