--- a/src/content/blogs/passing-information-across-bootloader-components.mdx
+++ b/src/content/blogs/passing-information-across-bootloader-components.mdx
@@ -1,19 +1,20 @@
 ---
 title: Passing information across bootloader components
-description: When a device boots nowadays multiple firmware components need to
-  pass information around. This is usually done in a platform-specific way,
-  leading to confusion and increased maintenance costs. Linaro and Arm started
-  an effort to standardize that which led to a standard. Let’s look at the
-  details and the code upstreamed to various components
+description: >-
+  When a device boots nowadays multiple firmware components need to pass
+  information around. This is usually done in a platform-specific way, leading
+  to confusion and increased maintenance costs. Linaro and Arm started an effort
+  to standardize that which led to a standard. Let’s look at the details and the
+  code upstreamed to various components
 date: 2024-04-29T00:00:25.000Z
-image: linaro-website/images/blog/Banner_Virtualization
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Virtualization
 tags:
   - u-boot
   - iot-embedded
   - edge
 author: raymond-mao
 related: []
-
 ---
 
 # Introduction
