--- a/src/content/blogs/porting-common-linux-tools-into-morello-architecture.mdx
+++ b/src/content/blogs/porting-common-linux-tools-into-morello-architecture.mdx
@@ -1,13 +1,16 @@
 ---
 title: Porting Linux tools into Morello Architecture
-description: Morello is a research program developed by Arm in collaboration with the University of Cambridge. Its aim is to develop and use a Capability Hardware Enhanced RISC Instructions (CHERI) architecture.
+description: >-
+  Morello is a research program developed by Arm in collaboration with the
+  University of Cambridge. Its aim is to develop and use a Capability Hardware
+  Enhanced RISC Instructions (CHERI) architecture.
 date: 2021-06-23T01:21:12.000Z
-image: /linaro-website/images/blog/tech_background_1.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/tech_background_1.jpg
 tags:
   - u-boot
 author: linaro
 related: []
-
 ---
 # Introduction
 
