--- a/src/content/blogs/protected-uefi-variables-with-u-boot.mdx
+++ b/src/content/blogs/protected-uefi-variables-with-u-boot.mdx
@@ -1,13 +1,18 @@
 ---
 title: Protected UEFI Variables With U-Boot
-description: Critical system variables, like the UEFI ones, must be protected against a variety of attacks. On Arm servers and desktops, which typically run EDK2, dedicated flashes are used. Those would normally be accessible from the secure world only, since they are storing critical variables for our systems integrity and security.
+description: >-
+  Critical system variables, like the UEFI ones, must be protected against a
+  variety of attacks. On Arm servers and desktops, which typically run EDK2,
+  dedicated flashes are used. Those would normally be accessible from the secure
+  world only, since they are storing critical variables for our systems
+  integrity and security.
 date: 2021-01-04T01:21:12.000Z
-image: /linaro-website/images/blog/tech_background_1.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/tech_background_1.jpg
 tags:
   - u-boot
 author: ilias-apalodimas
 related: []
-
 ---
 
 # Intro
