--- a/src/content/blogs/qemu-a-tale-of-performance-analysis.mdx
+++ b/src/content/blogs/qemu-a-tale-of-performance-analysis.mdx
@@ -1,14 +1,16 @@
 ---
-title: "QEMU: A Tale of Performance analysis"
+title: 'QEMU: A Tale of Performance analysis'
 description: >
-  In this post, we will present the performance issues we identified when booting Android using QEMU, and how we solved these upstream. We will also answer the question “How fast can you boot Android using QEMU?”
+  In this post, we will present the performance issues we identified when
+  booting Android using QEMU, and how we solved these upstream. We will also
+  answer the question “How fast can you boot Android using QEMU?”
 date: 2025-01-14T00:00:00.000Z
-image: linaro-website/images/blog/Virtualization_image_x3vb2d.png
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Virtualization_image_x3vb2d.png
 tags:
   - virtualization
 author: pierrick-bouvier
 related: []
-
 ---
 
 Recently we were asked the question “How fast can you boot Android using QEMU?”.
