--- a/src/content/blogs/rust-device-backends-for-every-hypervisor.mdx
+++ b/src/content/blogs/rust-device-backends-for-every-hypervisor.mdx
@@ -6,13 +6,13 @@ description: >
   ecosystem. This blog post provides a status update and provides a short
   summary of the Rust-based virtualization ecosystem.
 date: 2023-12-14T05:42:53.000Z
-image: linaro-website/images/blog/Code_Image_Core_tech
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Code_Image_Core_tech
 tags:
   - virtualization
   - open-source
 author: erik-schilling
 related: []
-
 ---
 
 As part of project [Orko](https://linaro.atlassian.net/wiki/spaces/ORKO/overview) we have been busy improving the ecosystem of edge-computing. A fundamental part of that has been the infrastructure work to enable hypervisor agnostic virtio backends. Today we are giving a status update on our work in this area and discuss how the rust-vmm ecosystem helps us with our mission.
