--- a/src/content/blogs/securing-a-device-with-trusted-substrate.mdx
+++ b/src/content/blogs/securing-a-device-with-trusted-substrate.mdx
@@ -1,13 +1,15 @@
 ---
 title: Securing a device with Trusted Substrate
-description: In this article we talk about how to secure your embedded device with Trusted Substrate.
+description: >-
+  In this article we talk about how to secure your embedded device with Trusted
+  Substrate.
 date: 2022-02-24T01:21:12.000Z
-image: /linaro-website/images/blog/tech_background_1.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/tech_background_1.jpg
 tags:
   - u-boot
 author: ilias-apalodimas
 related: []
-
 ---
 # Introduction
 
