--- a/src/content/blogs/standardizing-firmware-updates-in-u-boot.mdx
+++ b/src/content/blogs/standardizing-firmware-updates-in-u-boot.mdx
@@ -6,13 +6,13 @@ description: >
   members did to improve the situation and come up with a solution that’s based
   on open standards
 date: 2023-10-30T00:41:25.000Z
-image: linaro-website/images/blog/istock-1201405775_150dpi
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/istock-1201405775_150dpi
 tags:
   - u-boot
   - iot-embedded
 author: sughosh-ganu
 related: []
-
 ---
 
 # Need for standardized firmware updates
