--- a/src/content/blogs/subkeys-in-op-tee-part-1.mdx
+++ b/src/content/blogs/subkeys-in-op-tee-part-1.mdx
@@ -1,18 +1,19 @@
 ---
-title: "Subkeys in OP-TEE part I "
-description: Up to now, Trusted Applications (TAs) for OP-TEE could be signed
-  and later verified by a single certificate. When multiple vendors are involved
-  though having a single signer doesn’t scale well. In this blog, we will
-  explore the latest OP-TEE additions allowing multiple signers of TAs.
+title: 'Subkeys in OP-TEE part I '
+description: >-
+  Up to now, Trusted Applications (TAs) for OP-TEE could be signed and later
+  verified by a single certificate. When multiple vendors are involved though
+  having a single signer doesn’t scale well. In this blog, we will explore the
+  latest OP-TEE additions allowing multiple signers of TAs.
 date: 2024-01-22T04:48:06.000Z
-image: linaro-website/images/blog/Code_Image_Core_tech
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Code_Image_Core_tech
 tags:
   - open-source
   - security
   - linux-kernel
 author: jens-wiklander
 related: []
-
 ---
 
 # Introduction
