--- a/src/content/blogs/subkeys-in-op-tee-part-2.mdx
+++ b/src/content/blogs/subkeys-in-op-tee-part-2.mdx
@@ -1,18 +1,19 @@
 ---
 title: Subkeys in OP-TEE part 2
-description: Up to now, Trusted Applications (TAs) for OP-TEE could be signed
-  and later verified by a single certificate. When multiple vendors are involved
-  though having a single signer doesn’t scale well. A while back we took a quick
-  look at the subkeys implemented in OP-TEE. In this blog, we will do a deep
-  dive on the implementation.
+description: >-
+  Up to now, Trusted Applications (TAs) for OP-TEE could be signed and later
+  verified by a single certificate. When multiple vendors are involved though
+  having a single signer doesn’t scale well. A while back we took a quick look
+  at the subkeys implemented in OP-TEE. In this blog, we will do a deep dive on
+  the implementation.
 date: 2024-04-26T01:48:55.000Z
-image: linaro-website/images/blog/Code_Image_Core_tech
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Code_Image_Core_tech
 tags:
   - security
   - toolchain
 author: jens-wiklander
 related: []
-
 ---
 
 # Introduction
