--- a/src/content/blogs/the-linaro-ecosystem-dashboard-the-centralised-information-hub-for-all-things-arm.mdx
+++ b/src/content/blogs/the-linaro-ecosystem-dashboard-the-centralised-information-hub-for-all-things-arm.mdx
@@ -1,10 +1,13 @@
 ---
 title: >
-  The Linaro Ecosystem Dashboard - the centralized information hub for all things Arm
+  The Linaro Ecosystem Dashboard - the centralized information hub for all
+  things Arm
 description: >
-  The Linaro Ecosystem Dashboard - the centralized information hub for all things Arm
+  The Linaro Ecosystem Dashboard - the centralized information hub for all
+  things Arm
 date: 2025-03-18T00:00:00.000Z
-image: linaro-website/images/blog/Linaro_Ecosystem_Dashboard_image_2_e0ebmh.png
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Linaro_Ecosystem_Dashboard_image_2_e0ebmh.png
 tags:
   - arm
   - open-source
