--- a/src/content/blogs/tips-and-tricks-for-validating-devicetree-sources-with-the-devicetree-schema.mdx
+++ b/src/content/blogs/tips-and-tricks-for-validating-devicetree-sources-with-the-devicetree-schema.mdx
@@ -1,14 +1,15 @@
 ---
 title: Tips and Tricks for Validating Devicetree sources with the Devicetree Schema
-description: In this blog we share some useful commands you can use with the
-  Devicetree Schema. Read more here!
+description: >-
+  In this blog we share some useful commands you can use with the Devicetree
+  Schema. Read more here!
 date: 2023-05-18T00:09:31.000Z
-image: linaro-website/images/blog/Banner_Linux_Kernel
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Linux_Kernel
 tags:
   - linux-kernel
 author: krzysztof-kozlowski
 related: []
-
 ---
 
 A devicetree is a data structure which describes hardware. The Devicetree (DT) schema in the Linux kernel can be used to validate and check your Devicetree sources (DTS). This allows the parser to spot mistakes in the DTS and to find properties not conforming to the Devicetree bindings. [Conformance with Devicetree bindings is one of the ARM SystemReady IR requirements](https://www.arm.com/architecture/system-architectures/systemready-certification-program/ir).
