--- a/src/content/blogs/top-byte-ignore-for-fun-and-memory-savings.mdx
+++ b/src/content/blogs/top-byte-ignore-for-fun-and-memory-savings.mdx
@@ -1,16 +1,17 @@
 ---
-title: "Top Byte Ignore For Fun and Memory Savings "
-description: In this article, David Spickett talks about how Top Byte Ignore
-  works and how to use it. Read more here!
+title: 'Top Byte Ignore For Fun and Memory Savings '
+description: >-
+  In this article, David Spickett talks about how Top Byte Ignore works and how
+  to use it. Read more here!
 date: 2023-02-08T09:32:00.000Z
-image: linaro-website/images/blog/Code_Image_Core_tech
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Code_Image_Core_tech
 tags:
   - open-source
   - arm
   - toolchain
 author: david-spickett
 related: []
-
 ---
 
 [Top Byte Ignore](https://developer.arm.com/documentation/den0024/a/ch12s05s01) (TBI) is a feature of Armv8-a AArch64 that allows software to use unused pointer bits to store data without having to hide them from the hardware. Reducing memory use, software overhead and programmer frustration.
