--- a/src/content/blogs/tracking-code-size-variations-between-llvm-releases.mdx
+++ b/src/content/blogs/tracking-code-size-variations-between-llvm-releases.mdx
@@ -1,15 +1,16 @@
 ---
 title: Tracking code size variations between LLVM releases
-description: In this blog post, we talk about tracking the size of LLVM
-  generated code and look at the results on the latest releases.
+description: >-
+  In this blog post, we talk about tracking the size of LLVM generated code and
+  look at the results on the latest releases.
 date: 2023-10-18T10:13:54.000Z
-image: linaro-website/images/blog/Code_Upstream_72
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Code_Upstream_72
 tags:
   - open-source
   - toolchain
 author: antoine-moynault
 related: []
-
 ---
 
 ### INTRODUCTION
