--- a/src/content/blogs/tuxmake-building-linux-with-kernel-org-toolchains.mdx
+++ b/src/content/blogs/tuxmake-building-linux-with-kernel-org-toolchains.mdx
@@ -1,17 +1,17 @@
 ---
-title: "TuxMake: Building Linux with kernel.org LLVM toolchains"
+title: 'TuxMake: Building Linux with kernel.org LLVM toolchains'
 description: >
   This blog talks about how support has been introduced for kernel.org LLVM
   toolchains. Click here to read more!
 date: 2024-04-17T08:05:14.000Z
-image: linaro-website/images/blog/Tech_Background
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Tech_Background
 tags:
   - testing
   - linux-kernel
   - toolchain
 author: senthil-kumaran
 related: []
-
 ---
 
 # Introduction
