--- a/src/content/blogs/type-tracking-using-arm-memory-tagging.mdx
+++ b/src/content/blogs/type-tracking-using-arm-memory-tagging.mdx
@@ -6,13 +6,13 @@ description: >
   article I will show you how to do that. It seems like a bad idea, but you
   might be surprised by the results.
 date: 2024-04-08T09:17:02.000Z
-image: linaro-website/images/blog/Code_Image_Core_tech
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Code_Image_Core_tech
 tags:
   - arm
   - toolchain
 author: david-spickett
 related: []
-
 ---
 
 # Memory Tagging is (Usually) For Memory Safety
