--- a/src/content/blogs/uefi-secureboot-in-u-boot.mdx
+++ b/src/content/blogs/uefi-secureboot-in-u-boot.mdx
@@ -7,7 +7,8 @@ description: >
   process before the operating system has been loaded.  Let’s investigate the
   available U-Boot options and hardware limitations.
 date: 2023-09-19T23:39:53.000Z
-image: linaro-website/images/blog/Tech_Background
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Tech_Background
 tags:
   - iot-embedded
   - u-boot
@@ -16,7 +17,6 @@ tags:
   - edge
 author: ilias-apalodimas
 related: []
-
 ---
 
 ## Why UEFI SecureBoot
