--- a/src/content/blogs/unified-boot-on-qualcomm-rbx-development-boards.mdx
+++ b/src/content/blogs/unified-boot-on-qualcomm-rbx-development-boards.mdx
@@ -1,20 +1,21 @@
 ---
 title: Unified Boot on Qualcomm RBx development boards
-description: "This blog talks about benefits of Linaro Core and Club memberships
-  with the optional Landing Team. Dedicated Linaro engineers contribute to
-  private and public projects while partnering with the open-source community.
-  The Linaro Qualcomm Landing Team has been actively involved since 2014,
-  building stable releases for the 96Boards Dragonboard program and supporting
-  next-gen Qualcomm mobile platforms. #Linaro #LandingTeam #OpenSource"
+description: >-
+  This blog talks about benefits of Linaro Core and Club memberships with the
+  optional Landing Team. Dedicated Linaro engineers contribute to private and
+  public projects while partnering with the open-source community. The Linaro
+  Qualcomm Landing Team has been actively involved since 2014, building stable
+  releases for the 96Boards Dragonboard program and supporting next-gen Qualcomm
+  mobile platforms. #Linaro #LandingTeam #OpenSource
 date: 2023-07-06T08:48:17.000Z
-image: linaro-website/images/blog/96boards-specification-consumer-edition-v2
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/96boards-specification-consumer-edition-v2
 tags:
   - android
   - linux-kernel
   - open-source
 author: vinod-koul
 related: []
-
 ---
 
 One of the benefits of Linaro Core and Club memberships is the optional Landing Team. A Landing Team is a group of Linaro engineers dedicated to one Linaro member, and whose work contributes to both private and public projects. Beginning in 2014, the Linaro Qualcomm Landing Team has been an active contributor to upstream Qualcomm platforms, building stable releases for the 96Boards Dragonboard program and adding support to the next generation Qualcomm mobile platforms. Fostering and partnering with the open source community is a primary goal of this Landing Team, often in the role of maintainers for Qualcomm sub-systems.
