--- a/src/content/blogs/upstream-linux-support-now-available-for-the-the-qualcomm-snapdragon-8-gen-3-mobile-platform.mdx
+++ b/src/content/blogs/upstream-linux-support-now-available-for-the-the-qualcomm-snapdragon-8-gen-3-mobile-platform.mdx
@@ -1,17 +1,16 @@
 ---
-title: " Upstream Linux support now available for the the Qualcomm Snapdragon 8
-  Gen 3 Mobile Platform"
-description: "Effortless upstream Linux integration, powerful performance
-  optimization, running AOSP with Mainline and last but not least continued
-  collaboration "
+title: ' Upstream Linux support now available for the the Qualcomm Snapdragon 8 Gen 3 Mobile Platform'
+description: >-
+  Effortless upstream Linux integration, powerful performance optimization,
+  running AOSP with Mainline and last but not least continued collaboration 
 date: 2023-10-26T10:02:02.000Z
-image: linaro-website/images/blog/stack
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/stack
 tags:
   - linux-kernel
   - qualcomm
 author: neil-armstrong
 related: []
-
 ---
 
 At Linaro, we're thrilled to share the latest development in our ongoing collaboration with Qualcomm. Linaro Engineer Neil Armstrong has successfully enabled upstream Linux support for the [Qualcomm Snapdragon 8 Gen 3 Mobile Platform](https://www.qualcomm.com/products/mobile/snapdragon/smartphones/snapdragon-8-series-mobile-platforms/snapdragon-8-gen-3-mobile-platform), the latest addition to the Snapdragon processor family.
