--- a/src/content/blogs/v6-2-v6-6-linux-kernel-one-year-stats-a-journey-into-the-heart-of-linaro-s-success.mdx
+++ b/src/content/blogs/v6-2-v6-6-linux-kernel-one-year-stats-a-journey-into-the-heart-of-linaro-s-success.mdx
@@ -1,20 +1,21 @@
 ---
-title: "V6.2-V6.6 Linux Kernel (one year) stats: A journey into the heart of
-  Linaro’s success"
+title: >-
+  V6.2-V6.6 Linux Kernel (one year) stats: A journey into the heart of Linaro’s
+  success
 description: >
   With V6.6 Linaro celebrates another year of contributions to the Linux Kernel.
   Through our engineers’ expertise and dedication, we explore the significant
   contributions they have made gaining valuable insights into the Linux kernel
   development process from V6.2 to the current V6.6 release.
 date: 2023-11-20T07:34:33.000Z
-image: linaro-website/images/blog/Banner_Linux_Kernel
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Linux_Kernel
 tags:
   - linux-kernel
   - arm
   - open-source
 author: linaro
 related: []
-
 ---
 
 ![Most active employers, 6.2 through 6.6](/linaro-website/images/blog/most-active-employers-6.2-through-6.6)
