--- a/src/content/blogs/windowsperf-release-2-4-0-introduces-the-first-stable-version-of-sampling-model-support.mdx
+++ b/src/content/blogs/windowsperf-release-2-4-0-introduces-the-first-stable-version-of-sampling-model-support.mdx
@@ -1,15 +1,17 @@
 ---
-title: WindowsPerf release 2.4.0 introduces the first stable version of sampling
+title: >-
+  WindowsPerf release 2.4.0 introduces the first stable version of sampling
   model support
-description: In this blog we talk about the highlights from the WindowsPerf
-  2.4.0 release. Read more here!
+description: >-
+  In this blog we talk about the highlights from the WindowsPerf 2.4.0 release.
+  Read more here!
 date: 2023-06-08T03:06:32.000Z
-image: linaro-website/images/blog/blog_python_woa
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/blog_python_woa
 tags:
   - windows-on-arm
 author: przemyslaw-wirkus
 related: []
-
 ---
 
 # Introduction
