--- a/src/content/blogs/windowsperf-release-2-5-1.mdx
+++ b/src/content/blogs/windowsperf-release-2-5-1.mdx
@@ -5,12 +5,12 @@ description: >
   and show how this release continues the development of WindowsPerf and is sure
   to please users of this popular performance monitoring tool.
 date: 2023-08-31T10:44:56.000Z
-image: linaro-website/images/blog/Auto_IoT_Edge_banner_pic
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Auto_IoT_Edge_banner_pic
 tags:
   - windows-on-arm
 author: everton-constantino
 related: []
-
 ---
 
 # Introduction
