--- a/src/content/blogs/windowsperf-release-3-0-0.mdx
+++ b/src/content/blogs/windowsperf-release-3-0-0.mdx
@@ -5,12 +5,12 @@ description: >
   major release is a continuation of WindowsPerf development. It combines
   updates from release 2.5.1 and adds new features that were missed previously.
 date: 2023-10-23T09:43:39.000Z
-image: linaro-website/images/blog/istock-1220974008_sm
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/istock-1220974008_sm
 tags:
   - windows-on-arm
 author: przemyslaw-wirkus
 related: []
-
 ---
 
 ## Introduction
