--- a/src/content/blogs/windowsperf-release-3-3-0.mdx
+++ b/src/content/blogs/windowsperf-release-3-3-0.mdx
@@ -1,16 +1,17 @@
 ---
 title: WindowsPerf Release 3.3.0
-description: In this blog, we announce the WindowsPerf 3.3.0 release, marking
-  another major milestone in our development efforts. This update introduces
-  disassembly analysis, allowing developers to thoroughly examine their Windows
-  on Arm (WOA) code at the assembly leve
+description: >-
+  In this blog, we announce the WindowsPerf 3.3.0 release, marking another major
+  milestone in our development efforts. This update introduces disassembly
+  analysis, allowing developers to thoroughly examine their Windows on Arm (WOA)
+  code at the assembly leve
 date: 2024-02-05T02:46:15.000Z
-image: linaro-website/images/blog/screenshot-2023-08-11-at-11.37.28-485-980828-2
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/screenshot-2023-08-11-at-11.37.28-485-980828-2
 tags:
   - windows-on-arm
 author: przemyslaw-wirkus
 related: []
-
 ---
 
 We are happy to announce the latest WindowsPerf release version [3.3.0](https://gitlab.com/Linaro/WindowsPerf/windowsperf/-/releases/3.3.0). This major release is a continuation of WindowsPerf development effort. For previous release information check [this content](https://www.linaro.org/blog/windowsperf-release-3-0-0) out.
