--- a/src/content/blogs/becoming-a-kernel-developer-part1-posting-your-first-patch.mdx
+++ b/src/content/blogs/becoming-a-kernel-developer-part1-posting-your-first-patch.mdx
@@ -1,9 +1,13 @@
 ---
-title: "Becoming a Kernel Developer (1/3): Posting Your First Patch"
-description: |
-  Contributing to the Linux kernel can seem daunting and complex. In this three-part blog series, we will share our experience sending patches to the Linux kernel and interacting with the community. Check out our first blog to learn how to prepare, format, and post your first patch!
+title: 'Becoming a Kernel Developer (1/3): Posting Your First Patch'
+description: >
+  Contributing to the Linux kernel can seem daunting and complex. In this
+  three-part blog series, we will share our experience sending patches to the
+  Linux kernel and interacting with the community. Check out our first blog to
+  learn how to prepare, format, and post your first patch!
 date: 2025-09-16T00:00:00.000Z
-image: linaro-website/images/blog/IMG_0548_oth5pe.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/IMG_0548_oth5pe.jpg
 tags:
   - linux-kernel
   - open-source
