--- a/src/content/blogs/comparing-llvm-flang-with-other-fortran-compilers.mdx
+++ b/src/content/blogs/comparing-llvm-flang-with-other-fortran-compilers.mdx
@@ -6,12 +6,12 @@ description: >+
   in improving its performance, and we compare it with other Fortran compilers.
 
 date: 2023-08-24T01:00:52.000Z
-image: linaro-website/images/blog/Banner_Toolchain
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Banner_Toolchain
 tags:
   - toolchain
 author: leandro-lupori
 related: []
-
 ---
 
 # Introduction
