--- a/src/content/blogs/debugging-and-profiling-on-the-nvidia-gh200-grace-hopper-superchip.mdx
+++ b/src/content/blogs/debugging-and-profiling-on-the-nvidia-gh200-grace-hopper-superchip.mdx
@@ -1,14 +1,15 @@
 ---
 title: Debugging and Profiling on the NVIDIA GH200 Grace Hopper Superchip
-description: In this blog, Beau Paisley talks about the state of debugging tools
-  for HPC. Read more here!
+description: >-
+  In this blog, Beau Paisley talks about the state of debugging tools for HPC.
+  Read more here!
 date: 2024-09-04T09:00:00.000Z
-image: /linaro-website/images/blog/Dots_lines_datacenter_UNDER_2MB_fhabqj.jpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Dots_lines_datacenter_UNDER_2MB_fhabqj.jpg
 tags:
   - hpc
 author: rudy-shand
 related: []
-
 ---
 import CloudinaryImg from "../../components/cloudinary/CloudinaryImg.astro";
 
