--- a/src/content/blogs/emulate-windows-on-arm.mdx
+++ b/src/content/blogs/emulate-windows-on-arm.mdx
@@ -2,12 +2,12 @@
 title: How to emulate Windows on Arm
 description: This blog is about emulating Windows on Arm on any Linux x64 machine
 date: 2023-06-20T11:19:17.000Z
-image: linaro-website/images/blog/coding
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/coding
 tags:
   - windows-on-arm
 author: pierrick-bouvier
 related: []
-
 ---
 
 In a previous [blog article](https://www.codeproject.com/Articles/5353967/Continuous-Integration-for-Windows-on-Arm), we presented Continuous Integration for Windows on Arm. While there are options for getting Arm devices (the [Windows Dev Kit 2023](https://www.microsoft.com/en-us/d/windows-dev-kit-2023/94K0P67W7581), [Lenovo Thinkpad X13](https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadx/thinkpad--x13s-\(13-inch-snapdragon\)/len101t0019) or [Dell Inspiron 14](https://www.dell.com/en-us/shop/dell-laptops/inspiron-14-laptop/spd/inspiron-14-3420-laptop) are all good options), projects that want to build and test on Arm may not have these available yet.
