--- a/src/content/blogs/ledge-blogs-uefi-http-and-https-boot-in-u-boot.mdx
+++ b/src/content/blogs/ledge-blogs-uefi-http-and-https-boot-in-u-boot.mdx
@@ -1,12 +1,14 @@
 ---
 title: UEFI HTTP and HTTPs Boot in U-Boot
-description: UEFI HTTP boot simplifies the network boot process by allowing the
-  firmware to retrieve operating system images and EFI executables directly from
-  an HTTP server. This eliminates the need for unsecure protocols like TFTP
-  (Trivial File Transfer Protocol) and enables mass deployment using public
-  networks.  Let’s go through the current U-Boot status and roadmap.
+description: >-
+  UEFI HTTP boot simplifies the network boot process by allowing the firmware to
+  retrieve operating system images and EFI executables directly from an HTTP
+  server. This eliminates the need for unsecure protocols like TFTP (Trivial
+  File Transfer Protocol) and enables mass deployment using public networks. 
+  Let’s go through the current U-Boot status and roadmap.
 date: 2023-10-16T23:28:08.000Z
-image: linaro-website/images/blog/istock-860653830sm
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/istock-860653830sm
 tags:
   - iot-embedded
   - u-boot
@@ -14,7 +16,6 @@ tags:
   - edge
 author: maxim-uvarov
 related: []
-
 ---
 
 ## Introduction
