--- a/src/content/blogs/linaro-helps-openeuler-to-officially-join-ceph-support-matrix.mdx
+++ b/src/content/blogs/linaro-helps-openeuler-to-officially-join-ceph-support-matrix.mdx
@@ -5,14 +5,14 @@ description: >
   between Linaro and openEuler. Linaro has introduced openEuler to the Ceph
   upstream and helped to make Ceph can be builtable on openEuler.
 date: 2023-08-11T09:38:17.000Z
-image: linaro-website/images/blog/screenshot-2023-08-11-at-11.37.28
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/screenshot-2023-08-11-at-11.37.28
 tags:
   - linux-kernel
   - open-source
   - datacenter
 author: kevin-zhao
 related: []
-
 ---
 
 As an open source operating system for digital infrastructure that covers all scenarios and supports a diverse list of computing platforms, openEuler always follows the upstream first policy. By making sure the upstream open source projects natively support openEuler, its users can obtain maximum convenience while developing, integrating, and using these softwares and solutions. Ceph is the most famous open source distributed storage system, being widely used in private cloud and cloud native scenarios. It has been an important objective for openEuler to become an Linux Distribution officially supported by the Ceph’s project.
