--- a/src/content/blogs/native-support-for-windows-on-arm-has-arrived.mdx
+++ b/src/content/blogs/native-support-for-windows-on-arm-has-arrived.mdx
@@ -1,15 +1,16 @@
 ---
 title: Native Support for Windows on Arm has arrived
-description: In this blog, we look at some of the big announcements made at
-  Microsoft Build and how they signal a huge leap forward for native development
-  on Windows on Arm. Read more here!
+description: >-
+  In this blog, we look at some of the big announcements made at Microsoft Build
+  and how they signal a huge leap forward for native development on Windows on
+  Arm. Read more here!
 date: 2023-06-15T10:22:14.000Z
-image: linaro-website/images/blog/open_source_keyboard_under_2mbjpg
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/open_source_keyboard_under_2mbjpg
 tags:
   - windows-on-arm
 author: andrea-gallo
 related: []
-
 ---
 
 # Introduction
