--- a/src/content/blogs/qualcomm-and-linaro-enable-latest-flagship-snapdragon-compute-soc.mdx
+++ b/src/content/blogs/qualcomm-and-linaro-enable-latest-flagship-snapdragon-compute-soc.mdx
@@ -5,13 +5,13 @@ description: >
   top of linux-next on the X Elite (X1E80100) platform even before it has been
   announced
 date: 2024-01-04T23:10:33.000Z
-image: linaro-website/images/blog/Auto_IoT_Edge_banner_pic
+image: >-
+  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Auto_IoT_Edge_banner_pic
 tags:
   - open-source
   - arm
 author: abel-vesa
 related: []
-
 ---
 
 # Running fully fledged Debian desktop (including GPU rendering) with patches on top of linux-next on the X Elite (X1E80100) platform even before it has been announced
